:wrench: [client] Fix dropdown overlap with checkbox.

--- a/src/components/countriesSelect/countries.scss
+++ b/src/components/countriesSelect/countries.scss
@@ -33,7 +33,7 @@ $color-phone-code: #707579;
     box-sizing: border-box;
     top: 62px;
     overflow: hidden;
-    z-index: 1;
+    z-index: 3;
 }
 
 .countries-select__content {
